feat: add mysql config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=planet-sw-api-test
+
+spring.datasource.url=jdbc:mysql://localhost/starwars?useSSL=true
+spring.datasource.username=root
+spring.datasource.password=1234
+
+spring.jpa.hibernate.ddl-auto=update
