feat: add config for pitest

--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,26 @@
 					</execution>
 				</executions>
 			</plugin>
-
+			<plugin>
+				<groupId>org.pitest</groupId>
+				<artifactId>pitest-maven</artifactId>
+				<version>1.16.2</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.pitest</groupId>
+						<artifactId>pitest-junit5-plugin</artifactId>
+						<version>1.2.1</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<targetTests>
+						<param>br.thullyoo.planet_sw_api_test.*Test</param>
+					</targetTests>
+					<excludedClasses>
+						<param>br.thullyoo.planet_sw_api_test.model.Planet</param>
+					</excludedClasses>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
